# convert-for-itunes

./: .gitignore  Cargo.toml  Pipfile  README.md  convert_for_itunes.py  for_macports_users.md  move_music_files.py  requirements.txt
.reuse/: dep5
src/: conversion_error.rs  convert_for_itunes.rs  element.rs  file_mover.rs  lib.rs  main.rs  metadata.rs  music_converter.rs  utilities.rs
src/element/: aac.rs  common.rs  ffmpeg.rs  flac.rs  lame.rs  lofty.rs  mp3.rs  ogg_vorbis.rs  wav.rs
tests/: aac.rs  convert_for_itunes.rs  converter.rs  file_mover.rs  flac.rs  metadata.rs  mp3.rs  ogg_vorbis.rs  wav.rs
tests/common/: mod.rs
tests/resources/: gstreamer_command.txt  move_test.flac  move_test.m4a  test1.flac  test1.m4a  test2.flac  test2.m4a
