[package]
name = "convert-for-itunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.5", features = ["derive"] }
lofty = "0.12.1"
rayon = "1.6.1"
sanitize-filename = "0.4.0"
tempfile = "3.5.0"
thiserror = "1.0.40"
which = "4.4.0"

[dev-dependencies]
mockall = "0.11.4"
test-context = "0.1.4"
