[package]
name = "convert-for-itunes"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.3"
lofty = "0.21.1"
log = "0.4.21"
sanitize-filename = "0.5.0"
tempfile = "3.5.0"
thiserror = "1.0.40"
which = "6.0.1"

[dev-dependencies]
mockall = "0.12.1"
relative-path = "1.9.2"
test-context = "0.3.0"
walkdir = "2.4.0"
